updating to latest

--- a/index.html
+++ b/index.html
@@ -9,10 +9,19 @@
   </head>
   <body>
 
+      <section id="header" class="full-width">
+        <div class="row">
+          <div class="large-4 columns">Logo</div>
+          <div class="large-8 columns">Nav</div>
+        </div>
+      </section>
+
       <div class="off-canvas-wrap" data-offcanvas>
         <div class="inner-wrap">
-          <nav class="tab-bar">
-
+          <nav class="tab-bar show-for-small-only">
+            <section>
+              test
+            </section>
             <section class="left tab-bar-section">
               <img src="images\branding.png" alt="Immortal Palm Seattle Martial Arts" title="Immortal Palm Seattle Martial Arts"/>
             </section>
@@ -34,38 +43,47 @@
           <section class="intro row">
 
             <div class="hero">
-              <div class="overlay-text small-10 small-centered">
-                Set in the year 0 F.E. ("Foundation Era"), The Psychohistorians opens on Trantor.
+              <div class="large-8 medium-8 small-12 columns overlay-text">
+                <p>Set in the year 0 F.E. ("Foundation Era"), The Psychohistorians opens on Trantor.</p>
               </div>
-              <div class="button-container">
+              <div class="large-4 medium-4 columns button-container">
                 <a href="#" class="button success small-8">Sign up for classes</a>
               </div>
+
+              <section class="services">
+                <ul>
+                  <li class="large-4 columns wing-chun"><a class="small-12 small-centered columns" href="#">
+                  <h2>Wing Chun</h2>
+                  <p>Utilize position, structure and sensitivity to gain explosive timing, speed and power</p>
+                  </a>
+                  <span class="chinese-symbol hide-for-small"></span>
+                  </li>
+                  <li class="large-4 columns tong-bei"><a class="small-12 small-centered columns" href="#">
+                  <h2>Tong Bei</h2>
+                  <p>Utilize position, structure and sensitivity to gain explosive timing, speed and power</p>
+                  </a>
+                  <span class="chinese-symbol hide-for-small"></span>
+                  </li>
+                  <li class="large-4 columns tai-chi"><a class="small-12 small-centered columns" href="#">
+                  <h2>Tai Chi</h2>
+                  <p>Utilize position, structure and sensitivity to gain explosive timing, speed and power</p>
+                  </a>
+                <span class="chinese-symbol hide-for-small"></span></li>
+                </ul>
+              </section>
+
             </div>
-
           </section>
 
-          <section class="services row">
-            <ul>
-              <li class="wing-chun"><a class="small-10 small-centered columns" href="#">
-              <h2>Wing Chun</h2>
-              <p>Utilize position, structure and sensitivity to gain explosive timing, speed and power</p>
-              </a></li>
-              <li class="tong-bei"><a class="small-10 small-centered columns" href="#">
-              <h2>Tong Bei</h2>
-              <p>Utilize position, structure and sensitivity to gain explosive timing, speed and power</p>
-              </a></li>
-              <li class="tai-chi"><a class="small-10 small-centered columns" href="#">
-              <h2>Tai Chi</h2>
-              <p>Utilize position, structure and sensitivity to gain explosive timing, speed and power</p>
-              </a></li>
-            </ul>
-          </section>
 
           <section class="about row">
-            <div class="small-12 columns">
-            <h2>Why choose Immortal Palm</h2>
-            <p>Polaroid wayfarers Pinterest chillwave occupy cred, brunch viral stumptown lumbersexual literally. Farm-to-table kitsch Austin locavore, occupy cray fixie blog Marfa four dollar toast aesthetic semiotics chillwave mixtape. Bushwick semiotics YOLO four loko, High Life meggings Portland Etsy plaid yr chillwave slow-carb polaroid.</o>
-            <p>Occupy single-origin coffee brunch, swag Intelligentsia 8-bit retro artisan tote bag YOLO Bushwick pickled. Kale chips occupy tousled irony seitan, keffiyeh taxidermy. Fashion axe Helvetica flannel polaroid mixtape, salvia raw denim. Tofu asymmetrical meh slow-carb, mlkshk authentic blog cornhole.</p>
+            <div class="large-8 small-12 columns">
+              <h2>Why choose Immortal Palm</h2>
+              <p>Polaroid wayfarers Pinterest chillwave occupy cred, brunch viral stumptown lumbersexual literally. Farm-to-table kitsch Austin locavore, occupy cray fixie blog Marfa four dollar toast aesthetic semiotics chillwave mixtape. Bushwick semiotics YOLO four loko, High Life meggings Portland Etsy plaid yr chillwave slow-carb polaroid.</o>
+              <p>Occupy single-origin coffee brunch, swag Intelligentsia 8-bit retro artisan tote bag YOLO Bushwick pickled. Kale chips occupy tousled irony seitan, keffiyeh taxidermy. Fashion axe Helvetica flannel polaroid mixtape, salvia raw denim. Tofu asymmetrical meh slow-carb, mlkshk authentic blog cornhole.</p>
+            </div>
+            <div class="large-4 small-12 columns panel">
+              <p>Occupy single-origin coffee brunch, swag Intelligentsia 8-bit retro artisan tote bag YOLO Bushwick pickled. Kale chips occupy tousled irony seitan, keffiyeh taxidermy. Fashion axe Helvetica flannel polaroid mixtape, salvia raw denim. Tofu asymmetrical meh slow-carb, mlkshk authentic blog cornhole.</p>
             </div>
           </section>
 
@@ -74,6 +92,12 @@
 
         </div>
       </div>
+
+    <footer id="footer" class="full-width">
+      <div class="row">
+        <div class="large-12 columns">&copy; 2016 Immortal Palm Seattle </div>
+      </div>
+    </footer>
 
 
     <script src="bower_components/jquery/dist/jquery.min.js"></script>
